# article-quickcheck

./: .gitignore  .gitlab-ci.yml  Makefile  QUICK_START.md  README.md  article.css  index.html  pyproject.toml  quickcheck.md  requirements.txt
.github/workflows/: main.yml  pages.yml
public/: index.html
src/: example.py  test_example.py
